# shellper

./: .coveragerc  .gitignore  .gitreview  .travis.yml  README.md  README.rst  main.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.testrepository/: times.dbm
etc/: calendar-api.json  client_secret.json  client_secret_gmail.json  gmail-api.json  template.yaml
etc/shellper/: shellper.conf
shellper/: base.py  config.py  main.py  validation.py  version.py
shellper/tests/: __init__.py  base.py
shellper/tests/integration/: abstract.py  runner.py  test_create_delete_event.py  test_create_send_mail.py
shellper/tests/unit/: fake_class.py  test_base.py  test_config.py  test_main.py  test_validation.py
shellper/tests/unit_integration/: test_abstract.py  test_create_delete_event.py  test_create_send_mail.py  test_runner.py
tools/: pretty_tox.sh
