[metadata]
name = shellper
version = 0.1
summary = Shellper project
description-file = README.rst
license = GNU GPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU GPL
    Operating System :: POSIX :: Linux
author = handbox
